--- a/Vidly/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Vidly/Views/Customers/Details.cshtml
@@ -1,19 +1,18 @@
-﻿@model Vidly.ViewModels.CustomerDetailsViewModel
+﻿@model Vidly.Models.Customer
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-@{
-    if (Model.CustomerDetials == null)
-    {
-        <p>No details for this Customer.</p>
-    }
-    else
-    {
-
-        <p>@Model.CustomerDetials.Name is a @Model.CustomerDetials.Sex of @Model.CustomerDetials.Age years.</p>
-    }
-}
-
+<table class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Customer</th>
+        </tr>
+    </thead>
+    <tbody>
+        <td>
+            @Model.Name
+        </td>
+    </tbody>
+</table>
