--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.ViewModels.NewCustomerViewModel
+﻿@model Vidly.ViewModels.CustomerFormViewModel
 @{
     /**/
 
@@ -7,7 +7,7 @@
 }
 
 <h2>New Customer</h2>
-@using (Html.BeginForm("Create", "Customers"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
@@ -16,18 +16,19 @@
 
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.BirthDate)
-        @Html.TextBoxFor(c => c.Customer.BirthDate, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Customer.BirthDate,"{0:d MMM yyyy}",new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(c => c.Customer.MembershipType)
+        @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership type", new { @class = "form-control" })
     </div>
 
     <div class="form-check">
         @Html.CheckBoxFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-input" })
         @Html.LabelFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-inpt" })
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(c => c.Customer.MembershipType)
-        @Html.DropDownListFor(c=>c.Customer.MembershipTypeId,new SelectList(Model.MembershipTypes,"Id","Name"),"Select Membership type",new { @class="form-control"})
-    </div>
+    @Html.HiddenFor(c=>c.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
