Added validations on CustomerForm

--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -9,26 +9,34 @@
 <h2>New Customer</h2>
 @using (Html.BeginForm("Save", "Customers"))
 {
+    @Html.ValidationSummary(true, "Please Fix below errors.")
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
         @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(c => c.Customer.BirthDate)
-        @Html.TextBoxFor(c => c.Customer.BirthDate,"{0:d MMM yyyy}",new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.Name)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.MembershipType)
         @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(c => c.Customer.BirthDate)
+        @Html.TextBoxFor(c => c.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.BirthDate)
     </div>
 
     <div class="form-check">
         @Html.CheckBoxFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-input" })
         @Html.LabelFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-inpt" })
     </div>
-    @Html.HiddenFor(c=>c.Customer.Id)
+    @Html.HiddenFor(c => c.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
+@section scripts
+{ 
+    @Scripts.Render("~/bundles/jqueryval");
+}
