--- a/Vidly/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Vidly/Views/Shared/_Layout.cshtml
@@ -16,9 +16,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+        
+    @Scripts.Render("~/bundles/lib")
     @RenderSection("scripts", required: false)
 </body>
 </html>
