--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -7,9 +7,7 @@
 <h2>Customers</h2>
 @Html.ActionLink("Add New Customer", "CustomerForm",null, new { @class = "btn btn-primary" })
 <br /><br />
-@{
-    if (@Model.Customers.Count > 0)
-    {
+    
         <table id="customers" class="table table-bordered table-hover">
             <thead>
                 <tr>
@@ -18,31 +16,37 @@
                     <th>Delete</th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var customer in Model.Customers)
-                {
-                    <tr>
-                        <td>@Html.ActionLink(@customer.Name, "Edit", new { id = customer.Id })</td>
-                        <td>@customer.MembershipType.Name</td>
-                        <td>
-                            <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
-                        </td>
-                    </tr>
-                }
+            <tbody>               
             </tbody>
-        </table>
-    }
-    else
-    {
-        <p>We don't have any customers yet.</p>
-    }
+        </table>   
 
-}
 @section scripts
     {
         <script>
             $(document).ready(function () {
-                $('#customers').DataTable();
+               var table = $('#customers').DataTable({
+                    ajax: {
+                        url: 'api/customers',
+                        dataSrc:""
+                    },
+                    columns: [
+                        {
+                            data: "name",
+                            render: function (data, type, customer) {
+                                return "<a href='customers/edit/" + customer.id + "'>"+customer.name+"</a>";
+                            }
+                        },
+                        {
+                            data:"membershipType.name",
+                        },
+                        {
+                            data: "id",
+                            render: function (data) {
+                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            }
+                        }
+                    ]
+                });
 
                 $('#customers').on('click','.js-delete', function () {
                     var button = $(this);
@@ -52,7 +56,7 @@
                                 url: "/api/customers/" + button.attr("data-customer-id"),
                                 method: "Delete",
                                 success: function () {
-                                    button.parents("tr").remove();
+                                    table.row(button.parents("tr")).remove().draw();                                    
                                 }
                             });
                         }
