--- a/Vidly/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Vidly/Views/Shared/_NavBar.cshtml
@@ -11,11 +11,12 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                <li>@Html.ActionLink("Customers","Index","Customers")</li>
-                <li>@Html.ActionLink("Movies", "Index","Movies")</li>
+            <li>@Html.ActionLink("About", "About", "Home")</li>
+            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
             </ul>
+            @Html.Partial("_LoginPartial")
         </div>
     </div>
 </div>
