Disabled clicks on Username, Added Authorize filter at global level and Added Migration to seed admin,guest users and roleType CanManageMovies.

--- a/Vidly/Vidly/Content/Site.css
+++ b/Vidly/Vidly/Content/Site.css
@@ -34,3 +34,10 @@ textarea {
 .validation-summary-errors span{
     color:red;
 }
+
+.not-active {
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+    color: white;
+}
