--- a/Vidly/Vidly/Views/Shared/_LoginPartial.cshtml
+++ b/Vidly/Vidly/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li>
                 @*@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
-                <a href="">Hello @User.Identity.GetUserName()!</a>
+                <a href="" class="not-active">Hello @User.Identity.GetUserName()!</a>
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
