--- a/Vidly/Vidly/Content/Site.css
+++ b/Vidly/Vidly/Content/Site.css
@@ -23,11 +23,11 @@ textarea {
     max-width: 280px;
 }
 
-.field-validation-error {
+.field-validation-error,label.error {
     color:red;
 }
 
-.input-validation-error {
+.input-validation-error,input.error {
     border:2px solid red;   
 }
 
